# EPhonLab

./: README.md  pyproject.toml  requirements  submit.sh
configure_pbs/: lsf_install_ephonlab.toml
ephonlab/: api_ephonlab.py  api_phonon.py  config.py
ephonlab/mesh/: grid.py
ephonlab/structure/: atoms.py
